--- a/src/scss/app/_app-content.scss
+++ b/src/scss/app/_app-content.scss
@@ -1,7 +1,8 @@
 .app-content {
 	padding: $app-content-padding-y $app-content-padding-x;
 	position: relative;
-	min-height: 100%;
+	min-height: 100vh;
+	background-color: #fff;
 	
 	@if $enable-rtl {
 		margin-right: $app-sidebar-width;
